tests/baselines/reference/invalidMultipleVariableDeclarations.errors.txt
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(32,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '数字'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(33,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '文字'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(34,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type 'C'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(35,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type 'D<文字>'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(36,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '类为 M'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(39,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(40,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C2'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(43,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'f' must be of type '(x: 文字) => 数字', but here has type '(x: 数字) => 文字'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(46,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type '文字[]', but here has type '数字[]'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(47,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type '文字[]', but here has type '(C | D<文字>)[]'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(50,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr2' must be of type 'D<文字>[]', but here has type 'D<数字>[]'.
tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts(53,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'm' must be of type '类为 M', but here has type '类为 A'.


==== tests/cases/conformance/statements/VariableStatements/invalidMultipleVariableDeclarations.ts (12 errors) ====
    interface I {
        id: number;
    }
    
    class C implements I {
        id: number;
        valid: boolean;
    }
    
    class C2 extends C {
        name: string;
    }
    
    class D<T>{
        source: T;
        recurse: D<T>;
        wrapped: D<D<T>>
    }
    
    function F(x: string): number { return 42; }
    
    module M {
        export class A {
            name: string;
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    // all of these are errors
    var a: any;
    var a = 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '数字'.
    var a = 'a string';
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '文字'.
    var a = new C();
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type 'C'.
    var a = new D<string>();
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type 'D<文字>'.
    var a = M;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a' must be of type '任意', but here has type '类为 M'.
    
    var b: I;
    var b = new C();
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C'.
    var b = new C2();
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'I', but here has type 'C2'.
    
    var f = F;
    var f = (x: number) => '';
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'f' must be of type '(x: 文字) => 数字', but here has type '(x: 数字) => 文字'.
    
    var arr: string[];
    var arr = [1, 2, 3, 4];
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type '文字[]', but here has type '数字[]'.
    var arr = [new C(), new C2(), new D<string>()];
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr' must be of type '文字[]', but here has type '(C | D<文字>)[]'.
    
    var arr2 = [new D<string>()];
    var arr2 = new Array<D<number>>();
        ~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'arr2' must be of type 'D<文字>[]', but here has type 'D<数字>[]'.
    
    var m: typeof M;
    var m = M.A;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'm' must be of type '类为 M', but here has type '类为 A'.